# real-time-object-detector-in-CPP

./: CMakeLists.txt  Detector.cpp  Detector.h  README.md  main.cpp
